2005-05-19  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Fix bug with is_aptgetable changing $_.

2005-05-18  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm, Package.pm: Load apt DB as needed, don't try caching it.

2005-05-18  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Services.pm, Package.pm: Move store_rename into Services.

2005-05-16  Daniel Macks  <dmacks@netspace.org>

	* *: verbosity_level() is now a $config object method

2005-05-16  Daniel Macks  <dmacks@netspace.org>

	* Config.pm: Refactor and make a more coherent verbosity_level

2005-05-14  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Bootstrap.pm: Disable copyfile when creating tarballs (otherwise we get
	nasty dot-underscore files if we expand them with Fink's tar).

2005-05-11  Dave Morrison  <dmrrsn@sourceforge.net> (thanks to msachs)

	* PkgVersion.pm: better checking for SetCXX
	* Bootstrap.pm: use 10.4 distro instead of 10.4-transitional if
	the environment variable FINK_NOTRANS is set
	
2005-05-10  Daniel Macks  <dmacks@netspace.org>

	* Text/ParseWords.pm: import Text::ParseWords-3.23 from perl5.8.6
	into Fink:: package namespace.
	* PkgVersion.pm: Use our own ParseWords (perl5.8.1's is buggy)

2005-05-08  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm, Validation.pm: Add support for conditional
	License options.


2005-05-06  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Call to get_mirror() should be get_license().

2005-05-06  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, PkgVersion.pm: Added new get_license() accessor.

2005-05-06  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* CLI.pm: Add SkipPrompts ability.
	* Engine.pm: Create SkipPrompts category 'virtualdep'.
	* Mirror.pm, NetAccess.pm, PkgVersion.pm: Create SkipPrompts category
	'fetch'.

2005-05-05  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Don't bother fixing "=" for single-char 'fink list' flags
